--- a/src/editor/ui/OsuxEditorPopover.ui
+++ b/src/editor/ui/OsuxEditorPopover.ui
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="OsuxEditorPopoverSearchbar" parent="GtkPopover">
+  <template class="OsuxEditorPopsearch" parent="GtkPopover">
     <property name="can_focus">False</property>
     <property name="position">right</property>
     <child>
