--- a/src/editor/ui/OsuxEditorPopover.ui
+++ b/src/editor/ui/OsuxEditorPopover.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Generated with glade 3.20.0 -->
-<interface>
+<interface domain="osux">
   <requires lib="gtk+" version="3.20"/>
   <template class="OsuxEditorPopsearch" parent="GtkPopover">
     <property name="can_focus">False</property>
