--- a/src/editor/ui/OsuxEditorWindow.ui
+++ b/src/editor/ui/OsuxEditorWindow.ui
@@ -644,15 +644,64 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkTreeView">
+                      <object class="GtkScrolledWindow">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <child internal-child="selection">
-                          <object class="GtkTreeSelection"/>
+                        <property name="shadow_type">in</property>
+                        <child>
+                          <object class="GtkViewport">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <child>
+                              <object class="GtkTreeView" id="inspector">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="level_indentation">1</property>
+                                <property name="enable_grid_lines">both</property>
+                                <property name="enable_tree_lines">True</property>
+                                <child internal-child="selection">
+                                  <object class="GtkTreeSelection"/>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="Offset-column">
+                                    <property name="title">Offset</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="Offset-renderer"/>
+                                      <attributes>
+                                        <attribute name="text">0</attribute>
+                                      </attributes>
+                                    </child>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="Type-column">
+                                    <property name="title">Type</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="Type-renderer"/>
+                                      <attributes>
+                                        <attribute name="text">1</attribute>
+                                      </attributes>
+                                    </child>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="Hitsound-column">
+                                    <property name="title">Hitsound</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="Hitsound-renderer"/>
+                                      <attributes>
+                                        <attribute name="text">2</attribute>
+                                      </attributes>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
+                          </object>
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
+                        <property name="expand">True</property>
                         <property name="fill">True</property>
                         <property name="position">1</property>
                       </packing>
@@ -837,9 +886,8 @@
                                         <property name="can_focus">True</property>
                                         <property name="halign">center</property>
                                         <property name="valign">center</property>
-                                        <property name="text" translatable="yes">0,7</property>
+                                        <property name="text" translatable="yes">0</property>
                                         <property name="digits">1</property>
-                                        <property name="value">0.69999999999999996</property>
                                       </object>
                                       <packing>
                                         <property name="expand">True</property>
@@ -1515,7 +1563,7 @@
                                         <property name="can_focus">True</property>
                                         <property name="halign">center</property>
                                         <property name="valign">center</property>
-                                        <property name="text" translatable="yes">0,7</property>
+                                        <property name="text" translatable="yes">0</property>
                                         <property name="digits">1</property>
                                       </object>
                                       <packing>
@@ -1554,7 +1602,7 @@
                                         <property name="can_focus">True</property>
                                         <property name="halign">center</property>
                                         <property name="valign">center</property>
-                                        <property name="text" translatable="yes">0,7</property>
+                                        <property name="text" translatable="yes">0</property>
                                         <property name="digits">1</property>
                                       </object>
                                       <packing>
@@ -1593,7 +1641,7 @@
                                         <property name="can_focus">True</property>
                                         <property name="halign">center</property>
                                         <property name="valign">center</property>
-                                        <property name="text" translatable="yes">0,7</property>
+                                        <property name="text" translatable="yes">0</property>
                                         <property name="digits">1</property>
                                       </object>
                                       <packing>
@@ -1632,7 +1680,7 @@
                                         <property name="can_focus">True</property>
                                         <property name="halign">center</property>
                                         <property name="valign">center</property>
-                                        <property name="text" translatable="yes">0,7</property>
+                                        <property name="text" translatable="yes">0</property>
                                         <property name="digits">1</property>
                                       </object>
                                       <packing>
