--- a/src/editor/ui/EdosuCloseLabel.glade
+++ b/src/editor/ui/EdosuCloseLabel.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="OsuxCloseLabel" parent="GtkBox">
+  <template class="EdosuCloseLabel" parent="GtkBox">
     <property name="can_focus">False</property>
     <child>
       <object class="GtkEventBox">
@@ -11,7 +11,7 @@
         <property name="visible_window">False</property>
         <property name="above_child">True</property>
         <child>
-          <object class="GtkLabel" id="label_value">
+          <object class="GtkLabel" id="label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="selectable">True</property>
@@ -25,11 +25,10 @@
       </packing>
     </child>
     <child>
-      <object class="GtkButton">
+      <object class="GtkButton" id="close_button">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="receives_default">False</property>
-        <signal name="clicked" handler="osux_close_button_clicked" object="OsuxCloseLabel" swapped="no"/>
         <child>
           <object class="GtkImage" id="close-icon">
             <property name="visible">True</property>
