--- a/src/editor/ui/EdosuInspector.glade
+++ b/src/editor/ui/EdosuInspector.glade
@@ -38,16 +38,8 @@
                 <property name="title" translatable="yes">column</property>
                 <child>
                   <object class="GtkCellRendererText" id="offset_text"/>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkTreeViewColumn" id="details">
-                <property name="title" translatable="yes">column</property>
-                <child>
-                  <object class="GtkCellRendererText" id="details_text"/>
                   <attributes>
-                    <attribute name="text">2</attribute>
+                    <attribute name="text">0</attribute>
                   </attributes>
                 </child>
               </object>
@@ -59,6 +51,17 @@
                   <object class="GtkCellRendererText" id="type_text"/>
                   <attributes>
                     <attribute name="text">1</attribute>
+                  </attributes>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkTreeViewColumn" id="details">
+                <property name="title" translatable="yes">column</property>
+                <child>
+                  <object class="GtkCellRendererText" id="details_text"/>
+                  <attributes>
+                    <attribute name="text">2</attribute>
                   </attributes>
                 </child>
               </object>
