--- a/src/editor/ui/EdosuProperties.glade
+++ b/src/editor/ui/EdosuProperties.glade
@@ -9,6 +9,7 @@
     <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="AudioLeadIn">
+    <property name="lower">-180000</property>
     <property name="upper">100</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
@@ -19,12 +20,12 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="BeatmapID">
-    <property name="upper">100</property>
+    <property name="upper">9999999999</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="BeatmapSetID">
-    <property name="upper">100</property>
+    <property name="upper">9999999999</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -36,8 +37,8 @@
     <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="DistanceSpacing">
-    <property name="upper">100</property>
-    <property name="step_increment">1</property>
+    <property name="upper">20</property>
+    <property name="step_increment">0.10000000000000001</property>
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="GridSize">
@@ -58,7 +59,8 @@
     <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="PreviewTime">
-    <property name="upper">100</property>
+    <property name="lower">-180000</property>
+    <property name="upper">9999999999</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
@@ -73,14 +75,15 @@
     <property name="page_increment">10</property>
   </object>
   <object class="GtkAdjustment" id="StackLeniency">
-    <property name="upper">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="upper">20</property>
+    <property name="value">0.69999999999999996</property>
+    <property name="step_increment">0.10000000000000001</property>
+    <property name="page_increment">1</property>
   </object>
   <object class="GtkAdjustment" id="TimelineZoom">
-    <property name="upper">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="upper">10</property>
+    <property name="step_increment">0.01</property>
+    <property name="page_increment">1</property>
   </object>
   <template class="EdosuProperties" parent="GtkNotebook">
     <property name="visible">True</property>
@@ -207,8 +210,9 @@
                       <object class="GtkComboBoxText" id="SampleSet">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="active">0</property>
+                        <property name="active">1</property>
                         <items>
+                          <item id="sampletset_default" translatable="yes">Default</item>
                           <item id="sampleset_normal" translatable="yes">Normal</item>
                           <item id="sampleset_soft" translatable="yes">Soft</item>
                           <item id="sampleset_drum" translatable="yes">Drum</item>
