--- a/src/editor/ui/EdosuView.glade
+++ b/src/editor/ui/EdosuView.glade
@@ -2,21 +2,31 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkAdjustment" id="time">
-    <property name="upper">100</property>
+  <object class="GtkAdjustment" id="time_adjust">
+    <property name="upper">20000</property>
     <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="page_increment">1000</property>
   </object>
   <template class="EdosuView" parent="GtkBox">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="EdosuGL" id="gl_area">
+      <object class="GtkAspectFrame" id="aspect_ratio">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="hexpand">True</property>
-        <property name="vexpand">True</property>
+        <property name="label_xalign">0</property>
+        <property name="shadow_type">none</property>
+        <property name="ratio">1.7777769565582275</property> <!-- 16/9 -->
+        <property name="obey_child">False</property>
+        <child>
+          <object class="EdosuGL" id="gl_area">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
+          </object>
+        </child>
       </object>
       <packing>
         <property name="expand">True</property>
@@ -25,13 +35,14 @@
       </packing>
     </child>
     <child>
-      <object class="GtkScale" id="time_scale">
+      <object class="GtkScale" id="time_range">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
-        <property name="adjustment">time</property>
+        <property name="adjustment">time_adjust</property>
         <property name="show_fill_level">True</property>
-        <property name="fill_level">100</property>
-        <property name="round_digits">1</property>
+        <property name="fill_level">20000</property>
+        <property name="round_digits">0</property>
+        <property name="digits">0</property>
       </object>
       <packing>
         <property name="expand">False</property>
