--- a/src/viewer/ui/VosuCloseLabel.glade
+++ b/src/viewer/ui/VosuCloseLabel.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="EdosuCloseLabel" parent="GtkBox">
+  <template class="VosuCloseLabel" parent="GtkBox">
     <property name="can_focus">False</property>
     <child>
       <object class="GtkEventBox">
