--- a/src/viewer/ui/VosuEditorPopover.glade
+++ b/src/viewer/ui/VosuEditorPopover.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.20.0 -->
 <interface domain="osux">
   <requires lib="gtk+" version="3.20"/>
-  <template class="EdosuPopsearch" parent="GtkPopover">
+  <template class="VosuPopsearch" parent="GtkPopover">
     <property name="can_focus">False</property>
     <property name="position">right</property>
     <child>
