--- a/src/viewer/ui/VosuInspector.glade
+++ b/src/viewer/ui/VosuInspector.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="EdosuInspector" parent="GtkBox">
+  <template class="VosuInspector" parent="GtkBox">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="orientation">vertical</property>
