--- a/src/viewer/ui/VosuView.glade
+++ b/src/viewer/ui/VosuView.glade
@@ -7,7 +7,7 @@
     <property name="step_increment">1</property>
     <property name="page_increment">1000</property>
   </object>
-  <template class="EdosuView" parent="GtkBox">
+  <template class="VosuView" parent="GtkBox">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="orientation">vertical</property>
