--- a/src/viewer/ui/VosuWindow.glade
+++ b/src/viewer/ui/VosuWindow.glade
@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="EdosuWindow" parent="GtkApplicationWindow">
+  <template class="VosuWindow" parent="GtkApplicationWindow">
     <property name="width_request">100</property>
     <property name="height_request">100</property>
     <property name="visible">True</property>
@@ -222,20 +222,6 @@
             <property name="hexpand">True</property>
             <property name="toolbar_style">icons</property>
             <child>
-              <object class="GtkToolButton" id="new_button">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="is_important">True</property>
-                <property name="action_name">app.new</property>
-                <property name="use_underline">True</property>
-                <property name="stock_id">gtk-new</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkToolButton" id="open_button">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
@@ -243,20 +229,6 @@
                 <property name="action_name">app.open</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-open</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="save_button">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="is_important">True</property>
-                <property name="action_name">app.save</property>
-                <property name="use_underline">True</property>
-                <property name="stock_id">gtk-save</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -274,77 +246,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToolButton" id="undo_button">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="is_important">True</property>
-                <property name="action_name">win.undo</property>
-                <property name="use_underline">True</property>
-                <property name="stock_id">gtk-undo</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="redo_button">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="is_important">True</property>
-                <property name="action_name">win.redo</property>
-                <property name="use_underline">True</property>
-                <property name="stock_id">gtk-redo</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="cut_button">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="is_important">True</property>
-                <property name="action_name">app.cut</property>
-                <property name="use_underline">True</property>
-                <property name="stock_id">gtk-cut</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="copy_button">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="is_important">True</property>
-                <property name="action_name">app.copy</property>
-                <property name="use_underline">True</property>
-                <property name="stock_id">gtk-copy</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="paste_button">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="is_important">True</property>
-                <property name="action_name">app.paste</property>
-                <property name="use_underline">True</property>
-                <property name="stock_id">gtk-paste</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton" id="select_button">
+              <object class="GtkToolButton" id="fullscreen_button">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="is_important">True</property>
@@ -357,30 +259,6 @@
                 <property name="homogeneous">True</property>
               </packing>
             </child>
-            <child>
-              <object class="GtkToolItem">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <child>
-                  <object class="GtkComboBoxText" id="edit_mode">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="active">0</property>
-                    <items>
-                      <item id="edit_mode_compose" translatable="yes">Composing</item>
-                      <item id="edit_mode_storyboard" translatable="yes">Storyboarding</item>
-                      <item id="edit_mode_timing" translatable="yes">Timing</item>
-                      <item id="edit_mode_modding" translatable="yes">Modding</item>
-                      <item id="edit_mode_debug" translatable="yes">Debugging</item>
-                    </items>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">False</property>
-              </packing>
-            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -389,89 +267,12 @@
           </packing>
         </child>
         <child>
-          <object class="GtkPaned" id="main_pane">
+          <object class="GtkNotebook" id="view_notebook">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="position">900</property>
-            <property name="position_set">True</property>
-            <property name="wide_handle">True</property>
-            <child>
-              <object class="GtkPaned" id="left_pane">
-                <property name="width_request">25</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="position">200</property>
-                <property name="position_set">True</property>
-                <property name="wide_handle">True</property>
-                <child>
-                  <object class="GtkNotebook" id="palette_notebook">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="show_tabs">False</property>
-                    <property name="show_border">False</property>
-                  </object>
-                  <packing>
-                    <property name="resize">False</property>
-                    <property name="shrink">True</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkNotebook" id="view_notebook">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="show_tabs">False</property>
-                    <property name="show_border">False</property>
-                    <property name="scrollable">True</property>
-                  </object>
-                  <packing>
-                    <property name="resize">True</property>
-                    <property name="shrink">True</property>
-                  </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="resize">False</property>
-                <property name="shrink">False</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkPaned" id="right_pane">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="orientation">vertical</property>
-                <property name="position">240</property>
-                <property name="position_set">True</property>
-                <property name="wide_handle">True</property>
-                <child>
-                  <object class="GtkNotebook" id="inspector_notebook">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="show_tabs">False</property>
-                    <property name="show_border">False</property>
-                  </object>
-                  <packing>
-                    <property name="resize">True</property>
-                    <property name="shrink">True</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkNotebook" id="properties_notebook">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="show_tabs">False</property>
-                    <property name="show_border">False</property>
-                  </object>
-                  <packing>
-                    <property name="resize">True</property>
-                    <property name="shrink">True</property>
-                  </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="resize">False</property>
-                <property name="shrink">False</property>
-              </packing>
-            </child>
+            <property name="can_focus">False</property>
+            <property name="show_tabs">False</property>
+            <property name="show_border">False</property>
+            <property name="scrollable">True</property>
           </object>
           <packing>
             <property name="expand">True</property>
