--- a/src/viewer/ui/VosuWindow.glade
+++ b/src/viewer/ui/VosuWindow.glade
@@ -2,6 +2,11 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
+  <object class="GtkFileFilter" id="Osu Replay File">
+    <patterns>
+      <pattern>*.osr</pattern>
+    </patterns>
+  </object>
   <template class="VosuWindow" parent="GtkApplicationWindow">
     <property name="width_request">100</property>
     <property name="height_request">100</property>
@@ -257,6 +262,26 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolItem">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <child>
+                  <object class="GtkFileChooserButton" id="audio_file_chooser">
+                    <property name="width_request">120</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="create_folders">False</property>
+                    <property name="do_overwrite_confirmation">True</property>
+                    <property name="title" translatable="yes">Open Replay File</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">False</property>
               </packing>
             </child>
           </object>
