--- a/src/viewer/ui/VosuFileFilterOsu.glade
+++ b/src/viewer/ui/VosuFileFilterOsu.glade
@@ -2,21 +2,19 @@
 <!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
+  <object class="GtkFileFilter" id="All files">
+    <patterns>
+      <pattern>*</pattern>
+    </patterns>
+  </object>
   <object class="GtkFileFilter" id="Beatmaps">
     <patterns>
       <pattern>*.osu</pattern>
     </patterns>
   </object>
-  <object class="GtkFileFilter" id="Storyboards">
+  <object class="GtkFileFilter" id="Replays">
     <patterns>
-      <pattern>*.osb</pattern>
-    </patterns>
-  </object>
-  <object class="GtkFileFilter" id="All files">
-    <mime-types>
-    </mime-types>
-    <patterns>
-      <pattern>*</pattern>
+      <pattern>*.osr</pattern>
     </patterns>
   </object>
 </interface>
